# underling

./: .gitignore  AUTHORS  About.html  Acknowledgments.html  LICENSE.in  License.html  Makefile.am  NEWS  NOOP.html  README  about_8page.html  acknowledgment_8page.html  annotated.html  benchmark.html  benchmark_8page.html  classes.html  classunderling_1_1fftw_1_1plan-members.html  classunderling_1_1fftw_1_1plan.html  classunderling_1_1grid-members.html  classunderling_1_1grid.html  classunderling_1_1noncopyable-members.html  classunderling_1_1noncopyable.html  classunderling_1_1plan-members.html  classunderling_1_1plan.html  classunderling_1_1problem-members.html  classunderling_1_1problem.html  concepts.html  concepts_8page.html  configure.ac  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_d94687a39c1271d9f804b2dbb9a15353.html  dir_fa7844dbe1b795737ad0ee2356316a01.html  error_8h.html  error_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  (+62 more)
.circleci/: README.md  config.yml  deploy-ghpages.sh
apps/: .gitignore  Makefile.am  mpi_argp.c  mpi_argp.h  test_bench.sh  test_setup.sh  underling_bench.c
build-aux/: .gitignore
doxygen/: DoxygenLayout.xml  concepts.page  doxygen.cfg  main.page
doxygen/txt_common/: gpl3.page
examples/: .gitignore  Makefile.am
gnulib/: .gitignore  Makefile.am  argp-help.c  getopt.c  minmax.h  unistd.in.h
m4/: ax_fftw3.m4  ax_mpi.m4  ax_mpip.m4  ax_prog_cc_c99_cflags.m4  boost.m4  extensions.m4  gnulib-cache.m4  gnulib-comp.m4
tests/: .gitignore  Makefile.am  fixtures.hpp  test_error.c  test_error.cpp  test_fftw_1D.cpp  test_tools.hpp  test_underling.cpp  test_underling.sh  test_underling_fft.cpp  test_underling_fft.sh  test_underling_fftw.cpp  test_underling_fftw.sh  test_underling_tools.hpp
underling/: .gitignore  Makefile.am  common.h  error.c  error.h  periodic_function.hpp  underling.c  underling.h  underling.hpp  underling_fft.c  underling_fft.h  underling_fft.hpp  underling_fftw.c  underling_fftw.h  underling_fftw.hpp  version.h.in  visibility.h
